--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=SpringMybatis
 	spring.datasource.username = root
 	spring.datasource.password = 20240501Umonica3!!
 	spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+	spring.mvc.hiddenmethod.filter.enabled: true
